New version with RDP based evaluator + code refactoring to address some comments provided in mail